# uray_engine

./: .clang-format  CMakeLists.txt
_archive/: 2025-08-14.md
include/: stb_image.h
include/glad/: glad.h
src/: config.h  glad.c  main.cpp
src/core/: camera.cpp  camera.h  scene.cpp  scene.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  unit.cpp  unit.h
src/core/component/: camera.cpp  camera.h  component.cpp  component.h  sprite_renderer.cpp  sprite_renderer.h
src/shader/: sprite.vert.glsl
